revno: 7740 [merge] message:   (DV) Last 3 months included in favorites + Period duplicates and order when selecting overlapping rel periods fixed + Favorites list UI bug fixed.
committer: Jan Henrik Overland <janhenrik.overland@gmail.com>
branch nick: dhis2
timestamp: Fri 2012-07-27 11:41:19 +0200

--- a/dhis-2/dhis-web/dhis-web-visualizer/src/main/webapp/dhis-web-visualizer/app/css/style.css
+++ b/dhis-2/dhis-web/dhis-web-visualizer/src/main/webapp/dhis-web-visualizer/app/css/style.css
@@ -615,6 +615,7 @@ body {
     font-size: 10px;
     color: #444;
     line-height: 16px;
+    height: 24px;
 }
 
 /* DV menu grid background now looks like a menu */
